--- a/laokou-service/laokou-module/laokou-test/laokou-test-juc/pom.xml
+++ b/laokou-service/laokou-module/laokou-test/laokou-test-juc/pom.xml
@@ -19,6 +19,10 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-cors</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
