feat: power job

--- a/laokou-cloud/pom.xml
+++ b/laokou-cloud/pom.xml
@@ -37,5 +37,6 @@
         <module>laokou-seata</module>
         <module>laokou-sentinel</module>
         <module>laokou-xxl-job</module>
+        <module>laokou-power-job</module>
     </modules>
 </project>
