--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: 17
+        java-version: [17]
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
