--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,14 +29,12 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
     - name: Build with Maven
       run: mvn clean install
     - name: Release Maven package
-      uses: samuelmeuli/action-maven-publish@v1
-      with:
-        # 一系列需要的密码
-        gpg_private_key: ${{ secrets.GPG_SECRET }}    # GPG 导出的那段长长的密钥
-        gpg_passphrase: ${{ secrets.GPG_PASSWORD }}   # 自己设置的 GPG 密码
-        nexus_username: ${{ secrets.OSSRH_USER }}     # sonatype 用户名（不是邮箱）
-        nexus_password: ${{ secrets.OSSRH_PASSWORD }} # sonatype 登录密码
+      run: mvn --batch-mode deploy
+      env:
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
