docs: GitHub发布到中央仓库的配置

--- a/pom.xml
+++ b/pom.xml
@@ -350,10 +350,9 @@
         </resources>
     </build>
     <distributionManagement>
-        <repository>
+        <snapshotRepository>
             <id>ossrh</id>
-            <name>Central Repository OSSRH</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
 </project>
