--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,19 +24,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
+        run: mvn clean install
         with:
           java-version: '17'
           distribution: 'adopt'
-          server-id: ossrh
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-      - id: install-secret-key
-        name: Install gpg secret key
-        run: |
-          cat <(echo -e "${{ secrets.GPG_SECRET }}") | gpg --batch --import
-          gpg --list-secret-keys --keyid-format LONG
-      - name: Publish package
-        env:
-          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
-        run: mvn --batch-mode -Dgpg.skip=true -Dgpg.passphrase=${{ secrets.GPG_PASSWORD }} clean deploy
